--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "5.3.4",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^0.9.3",
     "styled-components": "5.3.6"
   },
   "devDependencies": {
-    "@babel/runtime": "7.13.8",
+    "@babel/runtime": "7.19.4",
     "typescript": "4.1.3"
   },
   "scripts": {
@@ -23,7 +23,6 @@
   },
   "browserslist": [
     ">0.2%",
-    "not dead",
     "not ie <= 11",
     "not op_mini all"
   ]
