--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "5.3.4",
-    "react-scripts": "^0.9.3",
+    "react-scripts": "^5.0.1",
+    "recoil": "0.7.6",
     "styled-components": "5.3.6"
   },
   "devDependencies": {
